--- a/css/style.css
+++ b/css/style.css
@@ -4695,12 +4695,15 @@ header .scrolled {
   flex-direction: row;
   gap: 108px;
   align-items: center;
+  justify-content: space-between;
+  padding-right: 100px;
 }
 @media (max-width: 991px) {
   .dispute-resolution-top-section-wrapper .dispute-resolution-top-inner {
     flex-direction: column;
     align-items: unset;
     gap: 22px;
+    padding-right: 0;
   }
 }
 .dispute-resolution-top-section-wrapper .dispute-resolution-top-inner .left-content-section h2 {
