--- a/sass/pages/_dispute.scss
+++ b/sass/pages/_dispute.scss
@@ -45,10 +45,13 @@
         flex-direction: row;
         gap: 108px;
         align-items: center;
+        justify-content: space-between;
+        padding-right: 100px;
         @media(max-width: 991px){
             flex-direction: column;
             align-items: unset;
             gap: 22px;
+            padding-right: 0;
         }
 
         .left-content-section {
